<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Air Tactics</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="loading">loading &#8230;</string>
    <string name="content_description">content description</string>
    <string name="splash_app_name">Air Tactics 2.0</string>
    <string name="title_activity_game_menu">GameMenuActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="single_player">Single Player</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="online">Online</string>
    <string name="start">Start</string>
    <string name="randomize">Randomize</string>
    <string name="rotate">Rotate</string>
    <string name="zero">0</string>
    <string name="not_your_turn">It\'s not you turn, plase wait for your opponent to make his move.</string>
    <string name="not_started">The game has not started yet.</string>
    <string name="finished">The game is finished.</string>
    <string name="invide_friends">Invite Friends</string>
    <string name="check_matches">Check Matches</string>
    <string name="you_won">You Won!</string>
    <string name="you_lost">You Lost!</string>
    <string name="choose_your_opponent">Choose Your Opponent</string>
    <string name="achievements">achievements</string>
    <string name="you">You</string>
    <string name="opponent">Opponent</string>
    <string name="enemy">Enemy</string>

</resources>
