<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SplashScreenActivity" >

    <ImageView
        android:id="@+id/imageViewGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/icon_large" android:contentDescription="@string/content_description"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewGrid"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp"
        android:text="@string/loading"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageViewGrid"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/splash_app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

</RelativeLayout>