<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".GameMenuActivity" >

    <LinearLayout
        android:id="@+id/bigLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageViewPlaneBoard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description"
            android:src="@drawable/air_tactics" />

        <LinearLayout
            android:id="@+id/smallLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/buttonSinglePlayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_single_player" />

            <Button
                android:id="@+id/buttonInviteFriends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_multi_player" />

        </LinearLayout>

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-4668622539935763/6585462734" >
    </com.google.android.gms.ads.AdView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp" >

        <Button
            android:id="@+id/buttonCheckMatches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_matches" />

        <Button
            android:id="@+id/buttonOnline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/online" />
    </LinearLayout>

</RelativeLayout>